--- a/NAMESPACE
+++ b/NAMESPACE
@@ -10,9 +10,9 @@ export(msarc,
        msarc.plotCircle,
        msarc.plotHeatmap,
        msarc.tagCloud,
-       msarc.copyColors,
-       print.msarc,
-       summary.msarc)
+       msarc.copyColors)
+S3method(print,msarc)
+S3method(summary,msarc)
 importFrom(gplots,heatmap.2)
 importFrom(XLConnect,readWorksheetFromFile)
 importFrom(RColorBrewer,brewer.pal)
